--- a/config.properties
+++ b/config.properties
@@ -5,4 +5,11 @@ password=Hs.mz301107
 
 
 
+Kubra_eMail=test123@test.com
+Kubrapassword=...test123TEST123
+#Kubrapassword1:test123TEST123..
+#Kubrapassword:...test123TEST123
+
+
+
 
